Fix tooltip background in dark mode

--- a/src/app/variables.css
+++ b/src/app/variables.css
@@ -165,7 +165,7 @@ or "warn/action" ineastd of "red/green"
   --color-red-transparent: rgba(255, 69, 87, 0.1);
   --color-blue-manatee-transparent: rgba(138, 140, 162, 0.1);
   --color-jade-green-transparent: rgba(43, 214, 123, 0.1);
-  --color-tooltip: rgb(198, 212, 251);
+  --color-tooltip: rgb(255, 255, 255, 0.7);
 
   /*************************
         Box
@@ -246,4 +246,5 @@ or "warn/action" ineastd of "red/green"
   --tab-border-color: #4070f4;
   --color-search-container: var(--color-body-bg);
   --color-vote-item-bg: var(--color-mystic);
+  --color-tooltip: rgb(42, 42, 42, 0.7);
 }
